@@ -32,6 +32,8 @@ TBD
 	* Let ldns-dane use SPKI as the default selector i.s.o. Cert
 	* bugfix: Fit left over NSEC3s once more before adding empty non
 	  terminals.  Thanks Stuart Browne
+	* bugfix #605: Determine default trust anchor location at compile time
+	  Thanks Peter Koch
 
 1.6.17	2014-01-10
 	* Fix ldns_dnssec_zone_new_frm_fp_l to allow the last parsed line of a
